<package>
  <name>pr2_interactive_gripper_pose_action</name>
  <version>1.0.0</version>
  <description>This package provides an action node that, when called,
    displays an interactive marker in Rviz (or any other client)
    to interactively select a pose for the pr2 gripper.</description>
<maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_marker_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Adam Leeper</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>object_manipulator</build_depend>
  <build_depend>pr2_object_manipulation_msgs</build_depend>
  <build_depend>point_cloud_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>interactive_marker_helpers</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>interactive_markers</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>object_manipulator</run_depend>
  <run_depend>pr2_object_manipulation_msgs</run_depend>
  <run_depend>point_cloud_server</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>interactive_marker_helpers</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>interactive_markers</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>object_manipulator</test_depend> -->
  <!-- <test_depend>pr2_object_manipulation_msgs</test_depend> -->
  <!-- <test_depend>point_cloud_server</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>interactive_marker_helpers</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>interactive_markers</test_depend> -->

</package>
