<package>
  <name>pr2_object_manipulation_msgs</name>
  <version>1.0.0</version>
  <description>pr2_im_msgs</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_im_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matei Ciocarlie</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>object_manipulation_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>manipulation_msgs</run_depend>
  <run_depend>object_manipulation_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>manipulation_msgs</test_depend> -->
  <!-- <test_depend>object_manipulation_msgs</test_depend> -->

</package>
