<package>
  <name>pr2_wrappers</name>
  <version>1.0.0</version>
  <description>A library of useful PR2 interface classes.</description>
<maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_wrappers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Adam Leeper</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>pr2_common_action_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>object_manipulator</build_depend>
  <build_depend>pr2_plugs_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>pr2_common_action_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>object_manipulator</run_depend>
  <run_depend>pr2_plugs_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>pr2_common_action_msgs</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->
  <!-- <test_depend>object_manipulator</test_depend> -->
  <!-- <test_depend>pr2_plugs_msgs</test_depend> -->

<export>
    <cpp lflags="-L${prefix}/lib -lpr2_wrappers" cflags="-I${prefix}/include"/>
</export>

</package>
